Study/Udemy Docker and Kubernetes/Section12/kub-action-02-declarative-approach-basics/tqsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-ing
spec:
  selector: 
    app: app-ing
  type: ClusterIP
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 8080
