Study/Udemy Docker and Kubernetes/Section12/kub-action-02-declarative-approach-basics/tqing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-ing
            port:
              number: 80
