Study/Udemy Docker and Kubernetes/Section12/kub-action-02-declarative-approach-basics/tqthat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maxkub
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maxkub
            port:
              number: 80
